[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[pylint]
max-line-length=120
report=y
output-format=parseable
const-naming-style=any
disable=missing-docstring,too-few-public-methods


[flake8]
max-line-length = 120


[metadata]
name=ml-versioning-tools
version=0.0.4
license_file = LICENSE
description = Set of Machine Learning versioning helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = PeopleDoc
author_email = stephanie.bracaloni@people-doc.com
url = http://github.com/peopledoc/ml-versionning-tools
keywords = peopledoc, machine learning, versioning
classifiers =
    Programming Language :: Python :: 3
python_requires = >=3.6


[options]
zip_safe = True
include_package_data = True
packages = mlvtools
install_requires =
    docstring-parser==0.1
    ipython==6.3.0
    Jinja2==2.10
    nbconvert==5.3.1
    pydantic==0.13
[options.extras_require]
dev =
    pytest==3.7.2
    flake8==3.5.0
    pytest-cov==2.6.0
    pytest-mock==1.10.0
    twine==1.11.0

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

