[tool:pytest]
testpaths = tests
addopts =
    -p no:warnings

[pylint]
max-line-length=120
report=y
output-format=parseable
const-naming-style=any
disable=missing-docstring,too-few-public-methods


[flake8]
max-line-length = 120
exclude = tests/large/check_consistency/data

[metadata]
name=mlvtools
version=2.1.0
license_file = LICENSE
description = Set of Machine Learning versioning helpers
long_description = file: README.md
long_description_content_type = text/markdown
author = PeopleDoc
author_email = pdoc-team-ml@ultimatesoftware.com
url = http://github.com/peopledoc/ml-versionning-tools
keywords = peopledoc, machine learning, versioning, mlvtools
classifiers =
    Programming Language :: Python :: 3
python_requires = >=3.6


[options]
zip_safe = False
include_package_data = True
packages = mlvtools
install_requires =
    docstring-parser>=0.3
    Jinja2>=2.10.1
    nbconvert
    pydantic>=1.0
    PyYAML
    networkx
    yapf
[options.extras_require]
dev =
    pytest
    flake8
    pytest-cov
    pytest-mock
    twine
    dvc

[options.packages.find]
exclude =
    tests

[bdist_wheel]
universal = 1

